{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 492,
  "lineage": "f77bf1c1-115b-8da2-7706-f4324917577e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029a44d393af82e25",
            "arn": "arn:aws:ec2:us-east-1:143245743241:elastic-ip/eipalloc-029a44d393af82e25",
            "domain": "vpc",
            "id": "eipalloc-029a44d393af82e25",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-211-56-109.compute-1.amazonaws.com",
            "public_ip": "54.211.56.109",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "eipalloc-029a44d393af82e25",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143245743241:internet-gateway/igw-08c4b36db76c0f35b",
            "id": "igw-08c4b36db76c0f35b",
            "owner_id": "143245743241",
            "region": "us-east-1",
            "tags": {
              "Name": "tfaws-josemi-igw"
            },
            "tags_all": {
              "Name": "tfaws-josemi-igw"
            },
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "igw-08c4b36db76c0f35b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:143245743241:loadbalancer/app/tfaws-josemi-alb/d42b8104daddc6f3",
            "arn_suffix": "app/tfaws-josemi-alb/d42b8104daddc6f3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tfaws-josemi-alb-1009630870.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:143245743241:loadbalancer/app/tfaws-josemi-alb/d42b8104daddc6f3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tfaws-josemi-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-08298aac00152cdba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-078b9bb95175fe50e"
              },
              {
                "subnet_id": "subnet-0e4bc81c496f24beb"
              }
            ],
            "subnets": [
              "subnet-078b9bb95175fe50e",
              "subnet-0e4bc81c496f24beb"
            ],
            "tags": {
              "Name": "tfaws-josemi-alb"
            },
            "tags_all": {
              "Name": "tfaws-josemi-alb"
            },
            "vpc_id": "vpc-0638e30cb7dccb7de",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:143245743241:loadbalancer/app/tfaws-josemi-alb/d42b8104daddc6f3"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:143245743241:listener/app/tfaws-josemi-alb/d42b8104daddc6f3/b7fcafca20152e9c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:143245743241:listener/app/tfaws-josemi-alb/d42b8104daddc6f3/b7fcafca20152e9c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:143245743241:loadbalancer/app/tfaws-josemi-alb/d42b8104daddc6f3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:143245743241:listener/app/tfaws-josemi-alb/d42b8104daddc6f3/b7fcafca20152e9c"
          },
          "dependencies": [
            "aws_lb.app_lb",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:143245743241:listener/app/tfaws-josemi-alb/d42b8104daddc6f3/971c50d08ca5e4f1",
            "certificate_arn": "arn:aws:acm:us-east-1:143245743241:certificate/bfabf487-cb20-4219-814c-390ede6e131c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:143245743241:targetgroup/tfaws-josemi-tg/67a120ea12f06b0b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:143245743241:listener/app/tfaws-josemi-alb/d42b8104daddc6f3/971c50d08ca5e4f1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:143245743241:loadbalancer/app/tfaws-josemi-alb/d42b8104daddc6f3",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:143245743241:listener/app/tfaws-josemi-alb/d42b8104daddc6f3/971c50d08ca5e4f1"
          },
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:143245743241:targetgroup/tfaws-josemi-tg/67a120ea12f06b0b",
            "arn_suffix": "targetgroup/tfaws-josemi-tg/67a120ea12f06b0b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:143245743241:targetgroup/tfaws-josemi-tg/67a120ea12f06b0b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tfaws-josemi-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "tfaws-josemi-tg"
            },
            "tags_all": {
              "Name": "tfaws-josemi-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:143245743241:targetgroup/tfaws-josemi-tg/67a120ea12f06b0b"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-029a44d393af82e25",
            "association_id": "eipassoc-033b82fbe2fa1312f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-01ed8ee3d88ace48d",
            "network_interface_id": "eni-0d1b90e1472b6024d",
            "private_ip": "10.0.1.155",
            "public_ip": "54.211.56.109",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-078b9bb95175fe50e",
            "tags": {
              "Name": "tfaws-josemi-natgw"
            },
            "tags_all": {
              "Name": "tfaws-josemi-natgw"
            },
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "nat-01ed8ee3d88ace48d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-095448347cf5d89011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01ed8ee3d88ace48d",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-095448347cf5d8901",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-095448347cf5d8901"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143245743241:route-table/rtb-095448347cf5d8901",
            "id": "rtb-095448347cf5d8901",
            "owner_id": "143245743241",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "tfaws-josemi-private-rt"
            },
            "tags_all": {
              "Name": "tfaws-josemi-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "rtb-095448347cf5d8901",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143245743241:route-table/rtb-05aafffff1af7c2ca",
            "id": "rtb-05aafffff1af7c2ca",
            "owner_id": "143245743241",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08c4b36db76c0f35b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tfaws-josemi-public-rt"
            },
            "tags_all": {
              "Name": "tfaws-josemi-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "rtb-05aafffff1af7c2ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eda9173a43f56980",
            "region": "us-east-1",
            "route_table_id": "rtb-095448347cf5d8901",
            "subnet_id": "subnet-0a4ddb9fe20e84cef"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "rtbassoc-0eda9173a43f56980",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045a23ca7e8a4ae64",
            "region": "us-east-1",
            "route_table_id": "rtb-095448347cf5d8901",
            "subnet_id": "subnet-0d9e2fd4b28d54928"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "rtbassoc-045a23ca7e8a4ae64",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017bd0b0d3dce7d00",
            "region": "us-east-1",
            "route_table_id": "rtb-05aafffff1af7c2ca",
            "subnet_id": "subnet-078b9bb95175fe50e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "rtbassoc-017bd0b0d3dce7d00",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f3dba089831a54a",
            "region": "us-east-1",
            "route_table_id": "rtb-05aafffff1af7c2ca",
            "subnet_id": "subnet-0e4bc81c496f24beb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "rtbassoc-02f3dba089831a54a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143245743241:security-group/sg-08298aac00152cdba",
            "description": "Permitir HTTP desde Internet al ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08298aac00152cdba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP desde Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS desde Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tfaws-josemi-alb-sg",
            "name_prefix": "",
            "owner_id": "143245743241",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfaws-josemi-alb-sg"
            },
            "tags_all": {
              "Name": "tfaws-josemi-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "sg-08298aac00152cdba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143245743241:security-group/sg-0269795d653a4d5b8",
            "description": "Permitir acceso MySQL desde servidores web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0269795d653a4d5b8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL desde Web SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ea2d8249dec27726"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tfaws-josemi-db-sg",
            "name_prefix": "",
            "owner_id": "143245743241",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfaws-josemi-db-sg"
            },
            "tags_all": {
              "Name": "tfaws-josemi-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "sg-0269795d653a4d5b8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143245743241:security-group/sg-0b5ccd3024ee64be7",
            "description": "Permitir acceso NFS (EFS) desde servidores web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5ccd3024ee64be7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS desde Web SG",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ea2d8249dec27726"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "tfaws-josemi-efs-sg",
            "name_prefix": "",
            "owner_id": "143245743241",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfaws-josemi-efs-sg"
            },
            "tags_all": {
              "Name": "tfaws-josemi-efs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "sg-0b5ccd3024ee64be7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143245743241:security-group/sg-0ea2d8249dec27726",
            "description": "Permitir acceso al servidor web desde ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea2d8249dec27726",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP desde el ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08298aac00152cdba"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tfaws-josemi-web-sg",
            "name_prefix": "",
            "owner_id": "143245743241",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfaws-josemi-web-sg"
            },
            "tags_all": {
              "Name": "tfaws-josemi-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "sg-0ea2d8249dec27726",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143245743241:subnet/subnet-0a4ddb9fe20e84cef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4ddb9fe20e84cef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143245743241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "tfaws-josemi-private-1"
            },
            "tags_all": {
              "Name": "tfaws-josemi-private-1"
            },
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "subnet-0a4ddb9fe20e84cef",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143245743241:subnet/subnet-0d9e2fd4b28d54928",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9e2fd4b28d54928",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "143245743241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "tfaws-josemi-private-2"
            },
            "tags_all": {
              "Name": "tfaws-josemi-private-2"
            },
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "subnet-0d9e2fd4b28d54928",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143245743241:subnet/subnet-078b9bb95175fe50e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078b9bb95175fe50e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "143245743241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "tfaws-josemi-public-1"
            },
            "tags_all": {
              "Name": "tfaws-josemi-public-1"
            },
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "subnet-078b9bb95175fe50e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143245743241:subnet/subnet-0e4bc81c496f24beb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4bc81c496f24beb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "143245743241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "tfaws-josemi-public-2"
            },
            "tags_all": {
              "Name": "tfaws-josemi-public-2"
            },
            "vpc_id": "vpc-0638e30cb7dccb7de"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "subnet-0e4bc81c496f24beb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:143245743241:vpc/vpc-0638e30cb7dccb7de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-016f39a222608a94b",
            "default_route_table_id": "rtb-0033c9c49a8caf930",
            "default_security_group_id": "sg-069cf791e18045bd3",
            "dhcp_options_id": "dopt-0e4bdcdb0dd1af790",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0638e30cb7dccb7de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0033c9c49a8caf930",
            "owner_id": "143245743241",
            "region": "us-east-1",
            "tags": {
              "Name": "tfaws-josemi-vpc"
            },
            "tags_all": {
              "Name": "tfaws-josemi-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "143245743241",
            "id": "vpc-0638e30cb7dccb7de",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}